# gitplay

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  LICENSE  Node.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  apiTypes.ts  index.css  main.rs  repository.ts  repository.tsx  types.ts  walker.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  main.rs  walker.rs
src-tauri/src/walker/: mod.rs
src/components/: AppInner.tsx  Button.tsx  Commit.tsx  Controls.tsx  Explorer.tsx  FileExplorer.tsx  FileTree.tsx  FileViewer.tsx  Home.tsx  Icon.tsx  Log.tsx  Player.tsx  SidebarSectionHeading.tsx  SuggestedFiles.tsx  Timeline.tsx
src/components/widgets/: SidebarSectionHeading.tsx
src/stores/: changes.tsx  player.tsx  repository.tsx  viewers.tsx
src/utils/: misc.tsx
src/widgets/: FileChangesTreemapChart.tsx
